Actions
Bug #11885
closed[PATCH] IO#readpartial rejects bad args
Bug #11885:
[PATCH] IO#readpartial rejects bad args
Description
IO#readpartial rejects bad args
Sometimes a sleepy developer will want to swap read_nonblock
for readpartial forget to remove "exception: false"
- io.c (io_getpartial): remove unused kwarg from template
- test/ruby/test_io.rb (test_readpartial_bad_args): new
Files
Updated by Anonymous over 10 years ago
- Status changed from Open to Closed
Applied in changeset r53329.
IO#readpartial rejects bad args
Sometimes a sleepy developer will want to swap read_nonblock
for readpartial forget to remove "exception: false"
- io.c (io_getpartial): remove unused kwarg from template
- test/ruby/test_io.rb (test_readpartial_bad_args): new
[Bug #11885]
Updated by usa (Usaku NAKAMURA) about 10 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: REQUIRED, 2.2: REQUIRED, 2.3: REQUIRED to 2.0.0: UNKNOWN, 2.1: DONE, 2.2: REQUIRED, 2.3: REQUIRED
ruby_2_1 r53926 merged revision(s) 53329.
Updated by nagachika (Tomoyuki Chikanaga) about 10 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: DONE, 2.2: REQUIRED, 2.3: REQUIRED to 2.0.0: UNKNOWN, 2.1: DONE, 2.2: DONE, 2.3: REQUIRED
Backported into ruby_2_2 branch at r54041.
ruby_2_2 branch also requires the same patch with r53932.
Updated by nagachika (Tomoyuki Chikanaga) about 10 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: DONE, 2.2: DONE, 2.3: REQUIRED to 2.0.0: UNKNOWN, 2.1: DONE, 2.2: REQUIRED, 2.3: REQUIRED
rr54041 was reverted at r54044 because r54041 breaks some openssl tests.
Updated by nagachika (Tomoyuki Chikanaga) about 10 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: DONE, 2.2: REQUIRED, 2.3: REQUIRED to 2.0.0: UNKNOWN, 2.1: DONE, 2.2: DONE, 2.3: REQUIRED
r51016(partially) and r53329 were backported into ruby_2_2 branch at r54045.
Updated by naruse (Yui NARUSE) about 10 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: DONE, 2.2: DONE, 2.3: REQUIRED to 2.0.0: UNKNOWN, 2.1: DONE, 2.2: DONE, 2.3: DONE
ruby_2_3 r54352 merged revision(s) 53329.
Actions